--- a/index.html
+++ b/index.html
@@ -25,18 +25,20 @@
         </div>
       </div>
       <div class="content">
-        <h1>Para la mujer más bellA MARIA FERNANDA</h1>
+        <h1>Para la mujer más bella</h1>
+        <h1>MARIA FERNANDA</h1>
         <div class="container">
           <p>
             Amor mío, <br />
-            Cada día que pasa me doy cuenta de lo afortunado que soy por tenerte
-            en mi vida. Eres la mujer más bella, no solo por tu apariencia, que
-            me deja sin aliento, sino por tu bondad, tu inteligencia y tu
-            increíble capacidad de hacer que cada día sea mejor que el anterior.
-            Tu sonrisa ilumina mis días y tu risa es la melodía más dulce que he
-            escuchado. Contigo, cada momento se convierte en una aventura
-            maravillosa. Me inspiras a ser la mejor versión de mí mismo y me das
-            fuerzas cuando más lo necesito.
+            Hace solo un mes me hizo muy feliz poder saber que estoy con la
+            personas mas maravillosa del mundo.Cada día que pasa me doy cuenta
+            de lo afortunado que soy por tenerte en mi vida. Eres la mujer más
+            bella, no solo por tu apariencia, que me deja sin aliento, sino por
+            tu bondad, tu inteligencia y tu increíble capacidad de hacer que
+            cada día sea mejor que el anterior. Tu sonrisa ilumina mis días y tu
+            risa es la melodía más dulce que he escuchado. Contigo, cada momento
+            se convierte en una aventura maravillosa. Me inspiras a ser la mejor
+            versión de mí mismo y me das fuerzas cuando más lo necesito.
             <br />
             Con todo mi amor,<br />
             @Marco Mendoza
